--- a/Assets/CSS/GalleryStyle.css
+++ b/Assets/CSS/GalleryStyle.css
@@ -31,6 +31,11 @@
     color: black;
 }
 
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -39,6 +44,10 @@ body {
     background-image: url('../Images/BackgroundImage/bluewood.jpg');
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .container {
@@ -74,6 +83,12 @@ h1 {
 .content {
     background-color: white;
     padding: 10px;
+}
+
+footer{
+    margin-top: 10px; 
+    text-align: center;
+    color: aliceblue;
 }
 
 @media screen and (max-width: 1200px) {
