--- a/Assets/CSS/ContactStyle.css
+++ b/Assets/CSS/ContactStyle.css
@@ -36,68 +36,62 @@
     color: white;
 }
 
-* {
+body {
+    font-family: 'Times New Roman', Times, serif;
+    margin: 0;
+    background-color: #333;
+}
+
+*{
     box-sizing: border-box;
 }
 
-body {
-    background-image: url('../Images/BackgroundImage/bluewood.jpg');
-    font-family: 'Times New Roman', Times, serif;
-    margin: 0;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.container {
-    max-width: 1400px;
+.container{
+    border-radius: 5px;
+    background-color: rgb(65, 64, 64);
+    padding: 20px;
+    width: 80%;
     margin: auto;
+    margin-top: 5%;
 }
 
-h1 {
-    font-size: 50px;
-    word-break: break-all;
+input[type=text], textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
 }
-
-.row,
-.row > .column {
-    padding: 8px;
+  
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
-
-.column {
+  
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+  
+label{
     float: left;
-    width: 25%;
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.content {
-    background-color: white;
-    padding: 10px;
+    color: white;
+    font-size: 25px;
 }
 
 footer{
-    margin-top: 10px; 
+    margin-top: 40px; 
     text-align: center;
     color: aliceblue;
 }
 
-@media screen and (max-width: 1200px) {
-    .column {
-        width: 50%;
-    }
-}
-
 @media screen and (max-width: 600px) {
-    .column {
-        width: 100%;
-    }
-    
     .topnav .navs {
         float: left;
         display: block;
